--- a/index.html
+++ b/index.html
@@ -77,28 +77,28 @@
     <div class="box1 box">
       <div class="box-content">
         <h2>Cloths</h2>
-        <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box1_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class="box2 box">
       <div class="box-content">
         <h2>Health & Personal care</h2>
-        <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box2_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class="box3 box">
       <div class="box-content">
         <h2>Furniture</h2>
-        <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box3_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class="box4 box">
       <div class="box-content">
         <h2>Smartphones</h2>
-        <div class="box-img" style="background-image: url('box4_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box4_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
@@ -108,28 +108,28 @@
     <div class="box5 box">
       <div class="box-content">
         <h2>Beauty Products</h2>
-        <div class="box-img" style="background-image: url('box5_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box5_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class=" box">
       <div class="box-content">
         <h2>Pets Items</h2>
-        <div class="box-img" style="background-image: url('box6_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box6_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class=" box">
       <div class="box-content">
         <h2>Toys</h2>
-        <div class="box-img" style="background-image: url('box7_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box7_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
     <div class="box">
       <div class="box-content">
         <h2>Fashion</h2>
-        <div class="box-img" style="background-image: url('box8_image.jpg');"></div>
+        <div class="box-img" style="background-image: url('./Images/box8_image.jpg');"></div>
         <p>See more</p>
       </div>
     </div>
